--- a/bsconfig.json
+++ b/bsconfig.json
@@ -5,6 +5,7 @@
   "retainStagingDir": true,
   "createPackage": false,
   "sourceMap": true,
+  "allowBrighterScriptInBrightScript": true,
   "autoImportComponentScript": true,
   "files": [
     "manifest",
